2008-11-12  Bernhard Walle <bernhard.walle@gmx.de>

	* Fix wrong path when modifying the /etc/sysconfig/kdump file when
	  creating the kdump initrd.

2008-11-11  Bernhard Walle <bernhard.walle@gmx.de>

	* Print the prefix in the debugging output of
	  Debuglink::findDebugfile().
	* Fix copying of debug info when --root is specified and the debug
	  file resides in GLOBALDEBUGDIR/EXECDIR/DEBUGFILE.

2008-11-02  Bernhard Walle <bernhard.walle@gmx.de>

	* Implement printing of canonical path (realpath) for the 'print_target'
	  subcommand.
	* Implement support for resolving symbolic links inside a root directory
	  (--root=...) when saving the dump.
	* Don't print a (red) info message that email failed if both
	  KDUMP_SMTP_SERVER and KDUMP_NOTIFICATION_TO are empty.
	* If KDUMP_SAVEDIR points to a local file, resolve symlinks when
	  creating the initrd because in theory the file system that contains
	  parts of the symlinks is not mounted in initrd.
	* Fix KDUMP_NETCONFIG=auto by calling mkinitrd with right parameters.
	* Create core dumps in the initrd when kdumptool crashes.
	* Fix compile warning in IdentifyKernel::execute().
	* Also return the default terminal size if ioctl(TIOCGWINSZ) returns
	  a size of 0x0.
	* Fix std::logic_error in Email::send() that caused kdumptool to
	  terminate unexpectedly.
	* Remove newline from the SMTP status error text.
	* Implement debugging of SMTP session.
	* Set the hostname of the SMTP session based on the --fqdn parameter.
	* Don't report a failure in the email when there is no one.

2008-11-01  Bernhard Walle <bwalle@suse.de>

	* Assume a default terminal size of 80x25 (for printing the horizontal
	  line).
	* Check the exit status of kdumptool.

2008-10-26  Bernhard Walle <bwalle@suse.de>

	* boot.kdump: Use the full kernel release (obtained with
	  /sbin/get_kernel_version) to build the initrd name also when symlinks
	  are used.

2008-10-22  Bernhard Walle <bwalle@suse.de>
